--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ tagline: Bio
       <div class="col d-flex align-items-start">
         <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"/></svg>
         <div>
-          <h3 class="fw-bold mb-0 fs-4">Developer</h3>
+          <h3 class="fw-bold mb-0 fs-4">About </h3>
           <p>
-         My name is revWhiteShadow, and I am a passionate frontend developer from Bangladesh who loves to create innovative and powerful Magisk modules for Android devices.
+         My name is The Wave, and I am a passionate frontend developer from Bangladesh who loves to create innovative and powerful Magisk modules for Android devices.
             I am the creator of Godspeed Mode, a mod that boosts performance and battery life with four customizable profiles. 
             I am also working on Godspeed Mode A.I, GS RAM Drive, and other projects that aim to enhance the user experience. 
             I am currently learning C++, and I regularly write articles on my website www.gdTspeed.xyz. 
@@ -211,9 +211,9 @@ tagline: Bio
  <div class="row align-items-md-stretch">
     <div class="col-md-8">
         <div class="h-100 p-5 text-bg-dark rounded-3">
-            <h2>Donation</h2>
-            <p>If you appreciate my projects and would like to support my work, you can make a donation. Your contribution helps me continue developing and improving these projects. Feel free to donate by clicking the button below.</p>
-            <a href="https://ko-fi.com/revWS/tiers" target="_blank" class="btn btn-outline-light" type="button">Donate Now</a>
+            <h2>Help and Support</h2>
+            <p>If you you want any kind of support or help contact now .</p>
+            <a href="https://ko-fi.com/revWS/tiers" target="_blank" class="btn btn-outline-light" type="button">Help and Support</a>
         </div>
     </div>
 </div>
