--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ tagline: Bio
     <div class="col-md-8">
         <div class="h-100 p-5 text-bg-dark rounded-3">
             <h2>Help and Support</h2>
-            <p>If you you want any kind of support or help contact now .</p>
+            <p>If you want any kind of support or help contact now .</p>
             <a href="https://ko-fi.com/revWS/tiers" target="_blank" class="btn btn-outline-light" type="button">Help and Support</a>
         </div>
     </div>
