--- a/about-us.html
+++ b/about-us.html
@@ -9,68 +9,39 @@ permalink: /about-us
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Best Magisk Module</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        p {
-            color: #666;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: auto;
-        }
-    </style>
+    <title>About Us - The Wave</title>
+    <!-- Add your additional meta tags, stylesheets, or scripts here -->
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <h1>About Us - Best Magisk Module</h1>
-        </header>
 
-        <section>
-            <p>Welcome to <strong>bestmagiskmodule.github.io</strong>, your go-to resource for discovering and optimizing your Android experience through Magisk modules. Our platform is dedicated to exploring and showcasing the best Magisk modules that can enhance the functionality, performance, and customization of your Android device.</p>
-        </section>
+    <header>
+        <!-- Add your header content here -->
+        <h1>Welcome to The Wave</h1>
+        <nav>
+            <!-- Add your navigation links here -->
+            <a href="index.html">Home</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
 
-        <section>
-            <h2>Our Mission</h2>
-            <p>At Best Magisk Module, our mission is to curate and provide information about the most effective and innovative Magisk modules available. We aim to empower Android enthusiasts and users by offering insights into how these modules can elevate the capabilities of their devices, from performance tweaks to advanced customizations.</p>
-        </section>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>Welcome to The Wave, where innovation meets excellence. At The Wave, we believe in pushing boundaries and creating waves of positive change in the digital landscape.</p>
 
-        <section>
-            <h2>What Sets Us Apart</h2>
-            <p>Why choose Best Magisk Module? We stand out because:</p>
-            <ul>
-                <li>We thoroughly research and test Magisk modules to ensure their effectiveness and reliability.</li>
-                <li>We provide detailed guides and tutorials to help users seamlessly integrate Magisk modules into their devices.</li>
-                <li>Our community actively engages in discussions, sharing tips, and staying updated on the latest developments in the Magisk ecosystem.</li>
-            </ul>
-        </section>
+        <p>Our mission is to provide cutting-edge solutions that empower businesses to thrive in the ever-evolving world of technology. With a team of skilled professionals, we are committed to delivering high-quality products and services tailored to meet the unique needs of our clients.</p>
 
-        <section>
-            <h2>Connect With Us</h2>
-            <p>Have questions or suggestions? We'd love to hear from you! Connect with us on social media and join our community:</p>
-            <ul>
-                <li>Mail: <a hrbestmagiskmodule@gmail.com" target="_blank">@bestmagiskmodule</a></li>
-                <li>GitHub: <a href="https://github.com/bestmagiskmodule" target="_blank">bestmagiskmodule</a></li>
-            </ul>
-        </section>
+        <p>Whether you are a startup looking to establish your online presence or an established enterprise seeking to enhance your digital capabilities, The Wave is here to ride the tide with you. We combine creativity, expertise, and a customer-centric approach to deliver solutions that make a lasting impact.</p>
+    </section>
 
-        <section>
-            <h2>Thank You for Choosing Best Magisk Module!</h2>
-            <p>We appreciate your trust in our platform. Explore our curated Magisk modules and take your Android experience to new heights!</p>
-        </section>
-    </div>
+    <footer>
+        <!-- Add your footer content here -->
+        <p>&copy; 2024 The Wave. All rights reserved.</p>
+    </footer>
+
+    <!-- Add your additional scripts or closing body/html tags here -->
+
 </body>
 
 </html>
