--- a/Policy.html
+++ b/Policy.html
@@ -7,81 +7,66 @@ permalink: /Policy
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>The Wave - Privacy Policy</title>
 </head>
 
 <body>
-
     <header>
-        <h1>Privacy Policy</h1>
-       
+        <h1>The Wave Privacy Policy</h1>
     </header>
 
     <section>
-        <h2>Welcome to bestmagiskmodule.github.io</h2>
-        <p>We respect your privacy and are committed to protecting it through our compliance with this Privacy Policy.</p>
+        <h2>1. Introduction</h2>
+        <p>Welcome to The Wave! This Privacy Policy outlines how we collect, use, and safeguard your personal information when you visit our website (<a href="https://thewavewsp.github.io">https://thewavewsp.github.io</a>), referred to as "the Site."</p>
     </section>
 
     <section>
-        <h2>Information We Collect</h2>
-        <h3>Personal Information</h3>
-        <p>We may collect personal information from you, such as your name and email address when you voluntarily
-            submit it through our contact forms or other interaction points on the Website.</p>
-
-        <h3>Usage Data</h3>
-        <p>We may also collect information automatically as you navigate through the site. This may include usage
-            details, IP addresses, and information collected through cookies.</p>
-    </section>
-
-    <section>
-        <h2>How We Use Your Information</h2>
-        <p>We may use the information we collect for various purposes, including:</p>
+        <h2>2. Information We Collect</h2>
+        <p>We may collect various types of information, including but not limited to:</p>
         <ul>
-            <li>To respond to your inquiries or requests.</li>
-            <li>To improve our website and enhance user experience.</li>
-            <li>To communicate with you about updates, promotions, and other relevant information.</li>
-            <li>For any other purpose with your consent.</li>
+            <li>Personal Information (e.g., name, email address) provided voluntarily by you.</li>
+            <li>Usage Data, such as your IP address, browser type, and pages visited, collected automatically through cookies and similar technologies.</li>
         </ul>
     </section>
 
     <section>
-        <h2>Disclosure of Your Information</h2>
-        <p>We will not disclose personal information you provide, except:</p>
+        <h2>3. How We Use Your Information</h2>
+        <p>We use the collected information for purposes such as:</p>
         <ul>
-            <li>With your consent.</li>
-            <li>To comply with any court order, law, or legal process.</li>
-            <li>To enforce or apply our Terms of Service and other agreements.</li>
+            <li>Providing and maintaining the Site.</li>
+            <li>Communicating with you, responding to inquiries, and sending newsletters or updates.</li>
+            <li>Understanding how visitors interact with our Site to improve user experience.</li>
         </ul>
     </section>
 
     <section>
-        <h2>Cookies</h2>
-        <p>Our website may use cookies to improve your experience. You have the option to set your browser to refuse
-            all or some browser cookies. If you disable or refuse cookies, please note that some parts of this site
-            may become inaccessible or not function properly.</p>
+        <h2>4. Cookies</h2>
+        <p>We use cookies and similar technologies to enhance your experience on our Site. You can control cookies through your browser settings; however, disabling cookies may affect your ability to use certain features of the Site.</p>
     </section>
 
     <section>
-        <h2>Third-Party Links</h2>
-        <p>The Website may contain links to third-party websites. We have no control over the privacy practices of
-            these sites and are not responsible for the content or privacy practices employed by them.</p>
+        <h2>5. Third-Party Links</h2>
+        <p>Our Site may contain links to third-party websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
     </section>
 
     <section>
-        <h2>Changes to Our Privacy Policy</h2>
-        <p>We may update our Privacy Policy from time to time. If we make material changes to how we treat personal
-            information, we will notify you through a notice on the Website.</p>
+        <h2>6. Security</h2>
+        <p>We prioritize the security of your personal information but cannot guarantee its absolute security. Please be aware that transmission of data over the internet carries inherent risks, and we strive to implement reasonable security measures to protect your information.</p>
     </section>
 
     <section>
-        <h2>Contact Information</h2>
-        <p>If you have questions about this Privacy Policy, please contact us at <a href="mailto:bestmagiskmodule@gmail.com">bestmagiskmodule@gmail.com</a>.</p>
+        <h2>7. Changes to This Privacy Policy</h2>
+        <p>We may update our Privacy Policy periodically. It is your responsibility to review this policy for any changes. Continued use of the Site after changes are made constitutes your acceptance of the updated policy.</p>
+    </section>
+
+    <section>
+        <h2>8. Contact Us</h2>
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us at <a href="mailto:thewavewsp@gmail.com">thewavewsp@gmail.com</a>.</p>
     </section>
 
     <footer>
-        <p>Thank you for visiting bestmagiskmodule.github.io.</p>
+        <p>Last Updated: [Date]</p>
     </footer>
-
 </body>
 
 </html>
