--- a/Policy.html
+++ b/Policy.html
@@ -65,7 +65,7 @@ permalink: /Policy
     </section>
 
     <footer>
-        <p>Last Updated: [Date]</p>
+        <p>Last Updated: [22-01-2024]</p>
     </footer>
 </body>
 
