--- a/Policy.html
+++ b/Policy.html
@@ -17,14 +17,14 @@ permalink: /Policy
 
     <section>
         <h2>1. Introduction</h2>
-        <p>Welcome to The Wave! This Privacy Policy outlines how we collect, use, and safeguard your personal information when you visit our website (<a href="https://thewavewsp.github.io">https://thewavewsp.github.io</a>), referred to as "the Site."</p>
+        <p>Welcome to The Wave! This Privacy Policy outlines how we collect, use, and safeguard your personal information when you visit our website (<a href="https://thewavewsp.github.io">https://thewavewsp.github.io</a>), referred to as "the wave."</p>
     </section>
 
     <section>
         <h2>2. Information We Collect</h2>
         <p>We may collect various types of information, including but not limited to:</p>
         <ul>
-            <li>Personal Information (e.g., name, email address) provided voluntarily by you.</li>
+            <li>Personal Information (The Wave, thewavewsp@gmail.com) provided voluntarily by you.</li>
             <li>Usage Data, such as your IP address, browser type, and pages visited, collected automatically through cookies and similar technologies.</li>
         </ul>
     </section>
